Ultimos ajustes do site.

--- a/formas/rombroedo.html
+++ b/formas/rombroedo.html
@@ -20,7 +20,7 @@
     <figure class="centralizar" data-aos="fade-down">
       <img src="../assets/images/romboedro.png" alt="Imagem de um Romboedro">
     </figure>
-    <div class="formulario">
+    <div class="formulario" data-aos="fade-up">
       <div class="calculo">
         <label for="r_maior">Digite o D Maior</label>
         <input type="number" id="r_maior" name="" placeholder="D Maior" required />
