--- a/formas/circulo.html
+++ b/formas/circulo.html
@@ -20,7 +20,7 @@
     <figure class="centralizar" data-aos="fade-down">
       <img src="../assets/images/circulo.png" alt="Imagem de um Circulo">
     </figure>
-    <div class="formulario">
+    <div class="formulario" data-aos="fade-up">
       <div class="calculo">
         <label for="raio_cir">Digite o Raio do Círculo</label>
         <input type="number" id="raio_cir" name="" placeholder="Raio do Círculo" required />
