--- a/formas/cubo.html
+++ b/formas/cubo.html
@@ -20,7 +20,7 @@
     <figure class="centralizar" data-aos="fade-down">
       <img src="../assets/images/cubo.png" alt="Imagem de um Cubo">
     </figure>
-    <div class="formulario">
+    <div class="formulario" data-aos="fade-up">
       <div class="calculo">
         <label for="vol_cubo">Digite o Comprimento da Aresta</label>
         <input type="number" id="vol_cubo" name="" placeholder="Comp da Aresta" required />
