--- a/formas/cuboide.html
+++ b/formas/cuboide.html
@@ -20,7 +20,7 @@
     <figure class="centralizar" data-aos="fade-down">
       <img src="../assets/images/cuboide.png" alt="Imagem de um Cubóide">
     </figure>
-    <div class="formulario">
+    <div class="formulario" data-aos="fade-up">
       <div class="calculo">
         <label for="a_cubo">Digite o Lado A do Cubóide</label>
         <input type="number" id="a_cubo" name="" placeholder="Lado A" required />
