--- a/formas/quadrado.html
+++ b/formas/quadrado.html
@@ -20,7 +20,7 @@
     <figure class="centralizar" data-aos="fade-down">
       <img src="../assets/images/quadrado.png" alt="Imagem de um Quadrado">
     </figure>
-    <div class="formulario">
+    <div class="formulario" data-aos="fade-up">
       <div class="calculo">
         <label for="area_qua">Digite o Lado do Quadrado</label>
         <input type="number" id="area_qua" name="" placeholder="Lado do Quadrado" required />
