--- a/formas/retangulo.html
+++ b/formas/retangulo.html
@@ -20,7 +20,7 @@
     <figure class="centralizar" data-aos="fade-down">
       <img src="../assets/images/retangulo.png" alt="Imagem de um Retângulo">
     </figure>
-    <div class="formulario">
+    <div class="formulario" data-aos="fade-up">
       <div class="calculo">
         <label for="base_ret">Digite o Base do Retângulo</label>
         <input type="number" id="base_ret" name="" placeholder="Base do Retângulo" required />
