--- a/formas/trapezio.html
+++ b/formas/trapezio.html
@@ -20,7 +20,7 @@
     <figure class="centralizar" data-aos="fade-down">
       <img src="../assets/images/trapezoide.png" alt="Imagem de um Trapezoide">
     </figure>
-    <div class="formulario">
+    <div class="formulario" data-aos="fade-up">
       <div class="calculo">
         <label for="b_menor">Digite a Base Menor</label>
         <input type="number" id="b_menor" name="" placeholder="Base Menor" required />
